tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_references_cannot_mutate_immutable_variable/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Cannot mutate immutable variable `array`
  ┌─ src/main.nr:4:21
  │
4 │         mutate(&mut array);
  │                     -----
  │

Aborting due to 1 previous error
